input_page.css
.actions
{
  width: 100%;
  margin-top: 12px;
  margin-bottom: 12px;
}

.input
{
  width: 100%;
  position: relative;
}

.input>label+*
{
  position: relative;
  width: 100%;
  left: 0px;
  font-weight: 100;
  border-radius: 6px;
  height: 32px;
}

.input>*
{
  width: 100%;
  border-radius: 6px;
  height: 32px;
  vertical-align: middle;
}

.input>input[type=radio],
.input>input[type=checkbox]
{
  width: 24px;
  height: 24px;
}

.input>*:first-child:focus
{
  -moz-box-shadow: 3px 3px 4px #3f3f3f;
  -webkit-box-shadow: 3px 3px 4px #3f3f3f;
  box-shadow: 3px 3px 4px #3f3f3f;
}

.hint
{
  display: none;
  margin-left: auto;
  margin-right: auto;
  padding: 5px;
  position: absolute;
  bottom: 30px;
  left: 0px;
  font-size: 11px;
  font-weight: normal;
  font-style: italic;
  height: auto;
  background-color: rgba(255,255,255,0.85);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-box-shadow: 0px 0px 3px #222;
  -moz-box-shadow: 0px 0px 3px #222;
  box-shadow: 0px 0px 3px #222;
  color: #444;
  padding-left: 10px;
}

.input:focus>.hint,
.input:hover>.hint
{
  z-index: 1000;
  display: block;
}

.input > input:hover{
  box-shadow: 0px 0px 6px rgb(50, 204, 204);
}
.input > input{
  border-style: none;
  border-radius: 3px;
  font-size: 18px;
}

.hint::before{
  content: ' ';
	position: absolute;
	width: 0;
	height: 0;
	left: 30px;
  bottom: -20px;
	border: 10px solid;
	border-color: #222 transparent transparent #222;

}

.hint::after{
  content: ' ';
	position: absolute;
	width: 0;
	height: 0;
	left: 30px;
  bottom: -20px;
	border: 10px solid;
	border-color: #FFF transparent transparent #FFF;

}

.labelled-input
{
  margin-bottom: 6px;
  width: 100%;
  position: relative;
}

.labelled-input>label
{
  vertical-align: top;
  text-align: right;
  display: inline-block;
  font-size: 11pt;
  font-weight: 100;
}

.labelled-input>.input
{
  display: inline-block;
  margin-left: 1%;
  width: 73%;
}

.labelled-input+.actions
{
  margin-top: 12px;
  margin-bottom: 12px;
  margin-left: 26%;
  width: 73%;
}

.inplace-input
{
  margin-bottom: 6px;
  width: 100%;
  font-weight: 100;
  border-radius: 6px;
  height: 32px;
}

.info-line
{
  margin-bottom: 2px;
  font-size: 10pt;
  display: block;
  position: relative;
}

.info-line>label
{
  vertical-align: top;
  text-align: right;
  width: 32%;
  display: inline-block;
  font-size: 9pt;
  font-weight: lighter;
  padding-right: 8px;
}

.info-line>label+*
{
  display: inline-block;
  background: lightgrey;
  font-weight: bold;
  width: 58%;
}

.question-input
{
  margin-bottom: 16px;
  width: 100%;
  position: relative;
}

.question-input>label
{
  vertical-align: top;
  text-align: left;
  display: block;
  font-size: 11pt;
  font-weight: 100;
  margin-bottom: 3px;
}

.question-input>label+*
{
  display: block;
  width: 100%;
  font-weight: 100;
  border-radius: 6px;
  height: 32px;
}
.question-input>input[type=checkbox]
{
  width: 24px;
}

select>option
{
  height: 32px;
}

